# COT-DeepSeek-Claude-RAG

./: .dockerignore  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  pyproject.toml  rat_claude.py
rat/: rat.py
tests/: test_rat.py  test_rat_claude.py
uploads/: atomic-weapons.csv
web/: __init__.py  app.py
web/templates/: index.html
